--- a/namada-masp-dashboard/package.json
+++ b/namada-masp-dashboard/package.json
@@ -13,6 +13,9 @@
     "@tanstack/react-query": "^5.64.1",
     "@tanstack/react-table": "^8.20.6",
     "axios": "^1.7.9",
+    "axios-retry": "^4.5.0",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "masp_dashboard_wasm": "file:../pkg",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
