--- a/namada-masp-dashboard/package.json
+++ b/namada-masp-dashboard/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.64.1",
+    "@tanstack/react-query-devtools": "^5.67.2",
     "@tanstack/react-table": "^8.20.6",
     "axios": "^1.7.9",
     "axios-retry": "^4.5.0",
