--- a/namada-masp-dashboard/package.json
+++ b/namada-masp-dashboard/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:wasm": "cd .. && rustup target add wasm32-unknown-unknown && wasm-pack build --target web"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.64.1",
