--- a/priceFetch/.env.sample
+++ b/priceFetch/.env.sample
@@ -5,3 +5,6 @@ REFRESH_SECS=60
 REQUEST_LIMIT=100
 # Port to listen on
 SERVE_PORT=5337
+ASSET_LIST_URL="https://raw.githubusercontent.com/vknowable/mock-registry/refs/heads/main/namada/assetlist.json"
+NAMADA_RPC_URL="http://localhost:26657"
+NAM_TOKEN_ADDRESS="tnam1q9gr66cvu4hrzm0sd5kmlnjje82gs3xlfg3v6nu7"
