--- a/namada-masp-dashboard/package.json
+++ b/namada-masp-dashboard/package.json
@@ -1,44 +1,42 @@
 {
-  "name": "namada-masp-dashboard",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "build:wasm": "cd .. && rustup target add wasm32-unknown-unknown && wasm-pack build --target web"
-  },
-  "dependencies": {
-    "@tanstack/react-query": "^5.64.1",
-    "@tanstack/react-query-devtools": "^5.67.2",
-    "@tanstack/react-table": "^8.20.6",
-    "axios": "^1.7.9",
-    "axios-retry": "^4.5.0",
-    "echarts": "^5.6.0",
-    "echarts-for-react": "^3.0.2",
-    "masp_dashboard_wasm": "file:../pkg",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "vite-plugin-wasm": "^3.4.1"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/react": "^18.3.18",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.18.0",
-    "eslint-plugin-react": "^7.37.4",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5",
-    "vite-plugin-top-level-await": "^1.4.4"
-  }
+    "name": "namada-masp-dashboard",
+    "private": true,
+    "version": "0.0.0",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "build": "tsc -b && vite build",
+        "lint": "eslint .",
+        "preview": "vite preview"
+    },
+    "dependencies": {
+        "@tanstack/react-query": "^5.64.1",
+        "@tanstack/react-query-devtools": "^5.67.2",
+        "@tanstack/react-table": "^8.20.6",
+        "axios": "^1.7.9",
+        "axios-retry": "^4.5.0",
+        "echarts": "^5.6.0",
+        "echarts-for-react": "^3.0.2",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
+        "vite-plugin-wasm": "^3.4.1"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.17.0",
+        "@types/react": "^18.3.18",
+        "@types/react-dom": "^18.3.5",
+        "@vitejs/plugin-react-swc": "^3.5.0",
+        "autoprefixer": "^10.4.20",
+        "eslint": "^9.18.0",
+        "eslint-plugin-react": "^7.37.4",
+        "eslint-plugin-react-hooks": "^5.0.0",
+        "eslint-plugin-react-refresh": "^0.4.16",
+        "globals": "^15.14.0",
+        "postcss": "^8.5.1",
+        "tailwindcss": "^3.4.17",
+        "typescript": "~5.6.2",
+        "typescript-eslint": "^8.18.2",
+        "vite": "^6.0.5",
+        "vite-plugin-top-level-await": "^1.4.4"
+    }
 }
