fetch masp txs from postgres and add endpoint

--- a/priceFetch/.env.sample
+++ b/priceFetch/.env.sample
@@ -3,8 +3,12 @@ COINGECKO_API_KEY="..."
 REFRESH_SECS=60
 # Allowed requests per minute per IP address to this endpoint
 REQUEST_LIMIT=100
-# Port to listen on
 SERVE_PORT=5337
 ASSET_LIST_URL="https://raw.githubusercontent.com/vknowable/mock-registry/refs/heads/main/namada/assetlist.json"
 NAMADA_RPC_URL="http://localhost:26657"
 NAM_TOKEN_ADDRESS="tnam1q9gr66cvu4hrzm0sd5kmlnjje82gs3xlfg3v6nu7"
+DB_USER="postgres"
+DB_HOST="postgres"
+DB_NAME="namada-indexer"
+DB_PASSWORD="super_secure_password123"
+DB_PORT=5432
