--- a/namada-masp-dashboard/package.json
+++ b/namada-masp-dashboard/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.64.1",
     "@tanstack/react-query-devtools": "^5.67.2",
     "@tanstack/react-table": "^8.20.6",
+    "@wojtekmaj/react-datetimerange-picker": "^6.0.0",
     "axios": "^1.7.9",
     "axios-retry": "^4.5.0",
     "echarts": "^5.6.0",
