add optional env variables for registry repo/branch

--- a/namada-masp-dashboard/.env.sample
+++ b/namada-masp-dashboard/.env.sample
@@ -1,3 +1,7 @@
 VITE_INDEXER_URL=http://localhost:5001
 VITE_RPC_URL=http://localhost:26657
-VITE_PRICE_URL=http://localhost:5337
+VITE_API_URL=http://localhost:5337
+# Optional, defaults to vknowable/mock-registry
+VITE_REGISTRY_REPO=vknowable/mock-registry
+# Optional, defaults to main
+VITE_REGISTRY_BRANCH=main
