--- a/namada-masp-dashboard/package.json
+++ b/namada-masp-dashboard/package.json
@@ -20,6 +20,7 @@
     "echarts-for-react": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.0",
     "vite-plugin-wasm": "^3.4.1"
   },
   "devDependencies": {
