update asset table layout; add pos param and pgf api routes; batch price fetching

--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -17,6 +17,7 @@
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "express-rate-limit": "^7.5.0",
+        "masp_dashboard_wasm": "file:../pkg",
         "pg": "^8.14.1"
     }
 }
