fix bug in total shielded value calculation (missing penumbra)

--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@namada/sdk": "^0.18.2",
         "axios": "^1.8.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
