--- a/backend-api/package.json
+++ b/backend-api/package.json
@@ -6,14 +6,12 @@
     "main": "src/app.js",
     "scripts": {
         "start": "node src/app.js",
-        "dev": "NODE_ENV=development nodemon src/app.js",
-        "postinstall": "patch-package"
+        "dev": "NODE_ENV=development nodemon src/app.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@namada/sdk": "^0.18.2",
         "axios": "^1.8.1",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
@@ -21,9 +19,5 @@
         "express-rate-limit": "^7.5.0",
         "masp_dashboard_wasm": "file:../pkg",
         "pg": "^8.14.1"
-    },
-    "devDependencies": {
-        "patch-package": "^8.0.0",
-        "postinstall-postinstall": "^2.1.0"
     }
 }
